--- a/frontend-react-app/package.json
+++ b/frontend-react-app/package.json
@@ -12,8 +12,11 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
   },
