--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
+  },
+  "dependencies": {
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0"
   }
 }
